[workspace]
members = [
    "src/bridge-tool",
    "src/minter-contract-utils",
    "src/integration-tests",
    "src/icrc2-minter",
    "src/erc20-minter",
    "src/solidity-helper",
    "src/btc-bridge",
    "src/rune-bridge",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-recursion = "1.0.4"
async-trait = "0.1"
bitcoin = "0.31"
candid = { version = "0.10", features = ["value"] }
clap = { version = "4", features = ["derive"] }
did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "did", branch = "canister_sdk_v18" }
env_logger = { version = "0.11", default-features = false }
eth-signer = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "eth-signer", branch = "canister_sdk_v18" }
ethereum-json-rpc-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "ethereum-json-rpc-client", branch = "canister_sdk_v18" }
ethereum-types = "0.14"
ethers-core = "2.0"
evm-canister-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "evm-canister-client", branch = "canister_sdk_v18" }
icrc-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "icrc-client", branch = "canister_sdk_v18" }
futures = { version = "0.3", default-features = false }
hex = "0.4"
ic-agent = "0.34"
ic-utils = "0.34"
ic-btc-interface = "0.2"
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", branch = "scheduler_with_context" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", branch = "scheduler_with_context" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", branch = "scheduler_with_context" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", branch = "scheduler_with_context" }
ic-metrics = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-metrics", branch = "scheduler_with_context", features = [
    "export-api",
] }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", branch = "scheduler_with_context" }
ic-storage = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-storage", branch = "scheduler_with_context" }
ic-task-scheduler = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-task-scheduler", branch = "scheduler_with_context" }
ic-test-utils = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-test-utils", branch = "scheduler_with_context" }
jsonrpc-core = "18.0"
log = "0.4"
minter-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "minter-client", branch = "canister_sdk_v18" }
minter-did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "minter-did", branch = "canister_sdk_v18" }
mockall = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.16"
ord-rs = { git = "https://github.com/bitfinity-network/ord-rs", tag = "v0.1.5" }
ordinals = "0.0.8"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
signature-verification-canister-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "signature-verification-canister-client", branch = "canister_sdk_v18" }
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt"] }
vergen = { version = "8.3", default-features = false, features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
] }


# state machine tests deps
ic-config = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-base-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-bitcoin-canister-mock = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-ckbtc-kyt = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-ckbtc-minter = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }

[profile.dev]
debug = false

# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

[profile.release]
#opt-level = "z"
lto = true
codegen-units = 1
