[workspace]
members = [
  "src/brc20-bridge",
  "src/bridge-canister",
  "src/bridge-client",
  "src/bridge-deployer",
  "src/bridge-did",
  "src/bridge-tool",
  "src/bridge-utils",
  "src/integration-tests",
  "src/icrc2-bridge",
  "src/erc20-bridge",
  "src/btc-bridge",
  "src/rune-bridge",
]

resolver = "2"


[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
alloy-sol-types = "0.7"
anyhow = "1.0"
async-recursion = "1.0.4"
async-trait = "0.1"
bip39 = "2"
bitcoin = "0.31"
bitcoincore-rpc = "0.18.0"
candid = { version = "0.10", features = ["value"] }
cfg-if = "1.0"
clap = { version = "4", features = ["derive"] }
did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "did", branch = "EPROD-1082-temp-deps", features = [
  "alloy-primitives-07",
] }
dirs = "5"
dotenv = "0.15"
drop_guard = "0.3"
env_logger = { version = "0.11.4", default-features = false }
eth-signer = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "eth-signer", branch = "EPROD-1082-temp-deps" }
ethereum-json-rpc-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "ethereum-json-rpc-client", branch = "EPROD-1082-temp-deps" }
ethereum-types = "0.14"
ethers-core = "2.0"
evm-canister-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "evm-canister-client", branch = "EPROD-1082-temp-deps" }
foundry-compilers = { version = "0.9", features = ["svm-solc"] }
futures = { version = "0.3", default-features = false }
hex = "0.4"
ic-agent = "0.39"
ic-btc-interface = "0.2"
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-metrics = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-metrics", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic", features = [
  "export-api",
] }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-storage = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-storage", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-task-scheduler = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-task-scheduler", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-test-utils = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-test-utils", branch = "EPROD-1082-migrate-all-dfx-and-state-machine-tests-to-pocket-ic" }
ic-utils = "0.39"
icrc-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "icrc-client", branch = "EPROD-1082-temp-deps" }
jsonrpc-core = "18.0"
lazy-regex = "3"
log = "0.4"
mockall = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.16"
ord-rs = { version = "0.3.0", default-features = false }
ordinals = "0.0.9"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false }
rust_decimal = "1.36"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serial_test = "3"
signature-verification-canister-client = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "signature-verification-canister-client", branch = "EPROD-1082-temp-deps" }
snapbox = "0.6"
strum = "0.26"
tempfile = "3"
thiserror = "1.0"
trycmd = "0.15"
tokio = { version = "1.36", features = ["macros", "rt"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
vergen-gitcl = { version = "1", default-features = false, features = [
  "build",
  "cargo",
  "rustc",
] }
wildmatch = "2"

# state machine tests deps
ic-base-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-bitcoin-canister-mock = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-ckbtc-kyt = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-ckbtc-minter = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-config = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic.git", tag = "release-2024-04-17_23-01-base" }

[profile.dev]
debug = false


# Set the settings for all dependencies (but not this crate itself or any workspace member).
# This includes build dependencies.
# Level range is from 0 (default for dev) to 3 (default for release)
[profile.dev.package."*"]
opt-level = 2

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

[profile.release]
# opt-level = "z"
lto = true
codegen-units = 1
