[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.13.x" }
ic-exports = { workspace = true }
once_cell = "1.16"
ord-rs = { workspace = true }
serde = { workspace = true }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
