[package]
name = "bitfinity-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "random-transactions-benchmark"
path = "src/bin/random-transactions.rs"

[[bin]]
name = "replicate-ethereum-mainnet-benchmark"
path = "src/bin/replicate-ethereum-mainnet.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
eth-signer = { workspace = true }
ethereum-types = { workspace = true }
ethers-core = { workspace = true }
evm-canister-client = { workspace = true, features = ["ic-agent-client"] }
futures = { workspace = true }
hex = { workspace = true }
ic-metrics = { workspace = true }
ic-exports = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = [
    "gzip",
    "json",
    "rustls-tls",
    "trust-dns",
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ic-test-utils = { workspace = true }
did = { workspace = true }
minter-did = { workspace = true }
minter-client = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
