[package]
name = "bitfinity-benchmark"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
did = { workspace = true }
env_logger = { workspace = true }
eth-signer = { workspace = true }
ethereum-types = { workspace = true }
ethers-core = { workspace = true }
evm-canister-client = { workspace = true, features = ["ic-agent-client"] }
futures = { workspace = true }
hex = { workspace = true }
ic-exports = { workspace = true }
ic-test-utils = { workspace = true }
icrc-client = { workspace = true }
log = { workspace = true }
minter-client = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
