[package]
name = "brc20-bridge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
ethers-core = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
futures = { workspace = true }
hex = "0.4"
ic-canister = { workspace = true }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-crypto-getrandom-for-wasm", tag = "v0.15.x" }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
inscriber = { path = "../inscriber" }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
ord-rs = { git = "https://github.com/bitfinity-network/ord-rs.git" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
