[package]
name = "brc20-bridge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
export-api = []

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = "0.18"
candid = { workspace = true }
did = { workspace = true }
dirs = "5.0"
ethers-core = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
futures = { workspace = true }
hex = "0.4"
ic-canister = { workspace = true }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-crypto-getrandom-for-wasm", tag = "v0.15.x" }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
inscriber = { path = "../inscriber" }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
ord-rs = { git = "https://github.com/bitfinity-network/ord-rs.git" }
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"

[build-dependencies]
vergen = { workspace = true }
