[package]
name = "brc20_bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
export-api = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
bridge-did = { path = "../bridge-did" }
bridge-canister = { path = "../bridge-canister" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
  "ic-canister-client",
] }
evm-canister-client = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true, features = ["canister"] }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
ord-rs = { workspace = true, default-features = false }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
