[package]
name = "bridge-canister"
version.workspace = true
edition.workspace = true

[features]
default = ["export-api"]
export-api = []

[dependencies]
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
drop_guard = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-log = { workspace = true, features = ["canister"] }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
ethers-core = { workspace = true }

[dev-dependencies]
ic-exports = { workspace = true }
tokio = { workspace = true }
