[package]
name = "bridge-client"
version.workspace = true
edition.workspace = true

[features]
default = ["export-api", "runes"]
export-api = []
runes = ["bridge-did/runes"]

[dependencies]
async-trait = { workspace = true }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
ic-canister-client = { workspace = true }
ic-log = { workspace = true }
