[package]
name = "bridge-deployer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bridge-client = { path = "../bridge-client" }
bridge-did = { path = "../bridge-did" }
candid = { workspace = true }
clap = { workspace = true, features = ["env"] }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethereum-json-rpc-client = { workspace = true, features = ["reqwest"] }
ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ic-agent = { workspace = true }
ic-canister-client = { workspace = true, features = ["ic-agent-client"] }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true }
ic-utils = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
trycmd = { workspace = true }