[package]
name = "bridge-deployer"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bridge-client = { path = "../bridge-client" }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils", features = ["native"] }
candid = { workspace = true }
clap = { workspace = true, features = ["env"] }
did = { workspace = true }
dotenv = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethereum-json-rpc-client = { workspace = true, features = ["reqwest"] }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-canister-client = { workspace = true, features = ["ic-agent-client"] }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true }
ic-utils = { workspace = true }
jsonrpc-core = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
