[package]
name = "bridge-did"
categories = ["cryptography::cryptocurrencies"]
include = ["src/**/*", "../../LICENSE", "../../README.md"]
description = "API types definition for bridge canisters"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
runes = ["ordinals"]

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
candid = { workspace = true }
bitcoin = { workspace = true }
ord-rs = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-stable-structures = { workspace = true }
ordinals = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
