[package]
name = "bridge-utils"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-sol-types = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
bridge-did = { path = "../bridge-did" }
ethers-core = { workspace = true }
did = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-stable-structures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpc-core = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
    "http-outcall",
] }
eth-signer = { workspace = true, features = ["ic_sign"] }
log = { workspace = true }
minter-did = { workspace = true }
ic-task-scheduler = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
foundry-compilers = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }
