[package]
name = "bridge-utils"
version.workspace = true
edition.workspace = true

[features]
default = []
native = ["tokio"]

[dependencies]
alloy = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
bridge-did = { path = "../bridge-did" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
  "ic-canister-client",
  "http-outcall",
  "sanitize-http-outcall",
] }
hex = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[build-dependencies]
anyhow = { workspace = true }
foundry-compilers = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }
