[package]
name = "btc-bridge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
anyhow = { workspace = true }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
] }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
futures = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { workspace = true }
ic-ckbtc-minter = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true, features = ["canister"] }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }


[dev-dependencies]
tokio = { workspace = true }
