[package]
name = "btc-nft-bridge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
export-api = []

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
dirs = { workspace = true }
erc721-minter = { path = "../erc721-minter" }
ethers-core = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
futures = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-crypto-getrandom-for-wasm = { workspace = true }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
inscriber = { path = "../inscriber" }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
ord-rs = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
